# nextlike

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: app.dockerfile  celery.dockerfile  celery_beat.dockerfile  celerybeat-schedule  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 1228a8e06bd1_.py  213794a80fa0_.py  21e9ade94fca_.py  29ccb3753028_.py  375cbf480628_.py  442c93ca86b9_initial_models.py  50a4460c6095_.py  56e87318c063_.py  5eb4d80fff4f_.py  61cdf3c7c7db_initial_models.py  6d360ddcaa20_.py  774665f41853_.py  78752a3695cb_.py  8baab0c42e3a_.py  9a65fb51b6e9_.py  a289a2fda5a1_.py  a436a6bd74f2_.py  af6e3c420622_.py  c22bf5d01ff5_.py  d31a197af1c6_.py  d59345b64005_.py
app/app/: celery_app.py  entrypoint.sh  logger.py  main.py  settings.py
app/app/api/: base.py  deps.py  types.py
app/app/core/: helpers.py  types.py
app/app/db/: base.py  base_class.py  session.py
app/app/exceptions/: items.py  query_config.py
app/app/llm/: embeddings.py  llm.py
app/app/models/: __init__.py  collection.py  organization.py
app/app/recommender/: aggregations_engine.py  collaborative_engine.py  embeddings.py  helpers.py  recommender.py  similarity_engine.py  types.py
app/app/resources/: cache.py  database.py  elastic.py  mongo.py  rdb.py
app/app/schemas/: collection.py  organization.py  pagination.py
app/app/tasks/: beat.py  collections.py  events.py  items.py
app/app/tests/: config.py  test_items.py  (+7 more)
app/scripts/: aggregations.json  playground.py  playground_medillm.py
embeddings-provider/: dockerfile  main.py  pyproject.toml
(+102 files in other folders)
