[tool.poetry]
name = "nextlike"
version = "0.0.1"
description = ""
readme = "README.md"
authors = ["sliakis <sliakis@car.gr>"]

[tool.poetry.dependencies]
python = "=3.10.14"
fastapi = "^0.65.2"
scikit-learn = "^1.0"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
openai = { extras = ["embeddings"], version = "^0.11.0"}
pydantic = { extras = ["email"], version = "^1.10.4" }
uvicorn = "^0.16.0"
tenacity = "^8.0.1"
psycopg2-binary = "^2.8.5"
redis = "^4.0.2"
celery = "^5.2.0"
pymongo = "^4.0.2"
sqlalchemy = "^2.0.25"
alembic = "^1.4.2"
deepmerge = "^0.3.0"
pgvector = "^0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
autoflake = "^1.4"
black = "^21.9b0"
mypy = "^0.910"
ipython = "^7.27.0"
pygments = "^2.10.0"
watchdog = "^2.1.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
