[tool.poetry]
name = "embeddings-provider"
version = "0.1.0"
description = "A FastAPI server for NLP with SentenceTransformer"
authors = ["Liakis Stefanos <stliakis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sentence-transformers = "^2.2.2"

[tool.poetry.scripts]
start = "main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"